external-crates/move/crates/move-compiler/tests/move_2024/typing/string_literal_bad_op.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W04039]: unable to determine princiapl type for literal
  ┌─ tests/move_2024/typing/string_literal_bad_op.move:2:31
  │
2 │     fun test(): u64 { let x = "hi"; x + 10u64 }
  │                               ^^^^ Could not determine a concrete type for this string literal, so defaulting to 'vector<u8>'
  │
  = To avoid this warning, add an explicit annotation, e.g., 'b"<const>"'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/string_literal_bad_op.move:2:39
  │
2 │     fun test(): u64 { let x = "hi"; x + 10u64 }
  │                           -           ^ ----- Found: 'u64'. It is not compatible with the other type.
  │                           │           │  
  │                           │           Incompatible arguments to '+'
  │                           Found: string. It is not compatible with the other type.
